# NULLXES-KNKF

./: README.md  claude.md  pyproject.toml
.github/workflows/: ci.yml  param-validate.yml
configs/data/: bootstrap_identity_tier0.yaml  domain_mix_tier3.yaml  pretrain_mix_tier1.yaml  sft_mix_tier2.yaml
configs/hub/: knk_vf_153b_hub.yaml  knk_vf_153b_model_card.md
configs/infer/: kagutsuchi_tracks_serving.yaml  vllm_serving.yaml
configs/model/: knk_vf_153b_active14b.yaml  knk_vf_lab_38b_active5b.yaml  knk_vf_proxy_3b_active.yaml  knk_vf_proxy_7b_active.yaml  knk_vf_target_70b_active.yaml  knkf_kagutsuchi_tracks_3_5t.yaml
configs/tokenizer/: knk_vf_tokenizer_128k.yaml  knk_vf_tokenizer_lab_8k.yaml
configs/train/: kagutsuchi_tracks_megatron_h200_b300.yaml  llamafactory_kurotama_knk_h200.yaml  llamafactory_kurotama_knk_pt_smoke_h200.yaml  llamafactory_kurotama_knk_pt_week_h200.yaml  llamafactory_kurotama_llama_h200.yaml  (+3 more)
docker/: Dockerfile.h200  Dockerfile.megatron
docs/: architecture.md  bootstrap.md  data-pipeline.md  hardware-topology.md  training-runbook.md
knk/: __init__.py
scripts/: build_kurotama_pretrain_corpus.py  build_kurotama_sft_corpus.py  build_nullxes_llamafactory_bundle.py  count_params.py  prepare_data.sh  prepare_knk_llamafactory_checkpoint.py  run_eval.sh  run_kurotama_knk_lab.sh  run_kurotama_knk_pt.sh  run_kurotama_llama_lab.sh  run_llamafactory_h200_once.sh  run_tokenizer_lab_h200_once.sh  sweep_lab_config.py  train_proxy.sh  train_target.sh  validate_tokenizer.py
tests/: test_blocks.py  test_moe_routing.py  test_param_counter.py
(+39 files in other folders)
